--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -10,8 +10,11 @@
 }
 
 .card-center{
-    margin: 20%;
-    padding: 10%;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-left: 40%;
+    margin-right: 40%;
+    padding: 5%;
     justify-content: center;
     align-items: center;
     background-color: #5fa3b4;
